--- a/program.env
+++ b/program.env
@@ -1,6 +1,8 @@
 PASSWORD=linu
 USER=linu
 DBNAME=linu
+DBHOST=localhost
+DBPORT=5432
 PROGRAM_NAME=EMF_SQL_ENGINE
 VERSION=V_1.0
 AUTHOR=YOULIN_CHEN
